--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,7 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 8px;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -10,22 +13,21 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  justify-content: center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
   font-size: 22px;
   background: white;
-  padding: 18px;
+  padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
-  margin: 2px solid black;
-  flex: 1;
-  justify-content: flex-start;
 }
