--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content:flex-start;
+  margin: auto;
+  padding: 8px;
+  align-items: center;
 }
 
 .profile-image {
@@ -27,6 +32,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding-right: 0;
 }
 
 button {
@@ -35,6 +41,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  
 }
 
 a {
@@ -45,4 +52,12 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 15px;
+}
+
+.new{
+  display: flex;
+  gap: 15px;
+  margin-left: auto;
 }
