completed flex heaser 2

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -13,10 +13,8 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  justify-content:flex-start;
-  margin: auto;
+  justify-content:space-between;
   padding: 8px;
-  align-items: center;
 }
 
 .profile-image {
@@ -32,7 +30,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  padding-right: 0;
+  
 }
 
 button {
@@ -54,10 +52,12 @@ ul {
   list-style-type: none;
   display: flex;
   gap: 15px;
+  margin: 0;
+  padding: 0;
 }
 
-.new{
+.right, .left{
   display: flex;
   gap: 15px;
-  margin-left: auto;
+  align-items: center;
 }
