--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-  padding:0 80px;
+  text-align: center;
 }
 
 img {
@@ -14,20 +14,18 @@ img {
   font-size: 36px;
   font-weight: 900;
   text-align: center;
+  padding-bottom: 32px;
 }
 
 .child{
   display: flex;
-  padding: 0;
-  margin: 0;
-  justify-content: space-between;
+  justify-content:center;
+  gap: 60px;
 }
 
-.text{
-  text-align: center;
-  padding:  0 40px;
+.subchild{
+  max-width: 200px;
 }
-
 /* do not edit this footer */
 .footer {
   position: fixed;
