--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,64 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
+  height: 20px;
   background: darkmagenta;
   color: white;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px;
+  
+}
+
+.content{
+  display: flex;
+  flex: 1;
+}
+
+.size{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 20px;
+  margin: 20px;
 }
 
 .footer {
-  height: 72px;
+  /* min-height: 42px; */
   background: #eee;
   color: darkmagenta;
+  text-align: center;
+  padding: 10px;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  /* height: 200px; */
+}
+ul{
+  list-style: none;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+a{
+  text-decoration: none;
+  color: white;
 }
