--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -4,11 +4,23 @@ html {
   margin: 0;
 }
 
+
+
 .container {
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template: 1fr 1fr 1fr 1fr 1fr 1fr 1fr/1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr  ;
+  gap: 10px;
+  grid-template-areas: 
+  "header header header header header header header header"
+  "sidebar sidebar nav nav nav nav nav nav"
+  "sidebar sidebar"
+  "sidebar sidebar"
+  "sidebar sidebar"
+  "footer footer footer footer footer footer footer footer";
 }
 
 .container div {
@@ -22,22 +34,28 @@ html {
 
 .header {
   background-color: #006157;
+  grid-row: 1 / 2;
+  grid-column: 1 / 10;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-area: 2 / 1 / 7 / 3;
 }
 
 .nav {
   background-color: #642cde;
+  grid-area: 2 / 3 / 3 / 10;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-area: 3/ 3/ 7 / 10;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-area: 7 / 1 / 8 / 10;
 }
 
 .article p {
